# localasisstant

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_assistant.py
src/: __init__.py  main_assistant.py
src/api/: rest_api.py
src/hotword/: wakeword_detector.py
src/llm/: gemma_wrapper.py
src/modules/: home_control.py
src/tts/: pocket_tts.py
